# ar_doodle_backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  contour_finding.py  docker-compose.yml  drawing_tool.py  get_dataset.py  globals.py  keras_preps.py  labels.py  main.py  model_testing.py  model_training.py  pyproject.toml  readme.md  requirements.txt  schemas.py  validation.py
data:nginx/: app.conf
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
models/: current_version.txt
models/model_20221021-184001/: keras_metadata.pb  saved_model.pb
models/model_20221021-184001/variables/: variables.index
