[tool.poetry]
name = "ar-doodle-backend"
version = "0.1.0"
description = ""
authors = ["Phil <79200375+phil-beep@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ar_doodle_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pillow = "^9.2.0"
matplotlib = "^3.6.1"
quickdraw = "^0.2.0"
numpy = "^1.23.4"
tensorboard = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
